Optimized layout and fixed flickering issues on chrome browser

--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ body {
 #navigation {
     display: flex;
     align-items: center;
-    position: sticky;
+    position: fixed;
     top: 0px;
     width: 100%;
     min-width: 375px;
@@ -196,7 +196,6 @@ body {
 .btn-text {
     width: 270px;
 }
-
 
 .btn-icon {
     display: flex;
