--- a/css/projects.css
+++ b/css/projects.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: sticky;
+    position: fixed;
     top: 50px;
     width: 100%;
     height: 50px;
@@ -462,7 +462,7 @@ ion-icon {
     min-height: 375px;
     padding: 25px;
     color: var(--text-dark-grey);
-    background-color: var(off-white-bg);
+    background-color: var(--off-white-bg);
 }
 
 #question {
